Fix stylesheet link in index.html
Updated the stylesheet link to remove the 'css/' prefix.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/my style.css">
+    <link rel="stylesheet" href="my style.css">
 </head>
 <body>
     <div class="parent">
@@ -14,4 +14,5 @@
         <div class="child"><img src="image/Me.jpeg"></div>
     </div>
 </body>
+
 </html>
